[package]
name = "chess-huffman"
version = "0.6.0"
authors = ["Thomas Daniels <daniels.thomas@pm.me>"]
edition = "2021"
license = "GPL-3.0+"
keywords = ["huffman", "compression", "decompression", "chess"]
readme = "README.md"
repository = "https://github.com/thomas-daniels/rust-chess-huffman"
categories = ["compression", "encoding", "algorithms", "games"]
description = "Compresses chess games using Huffman coding"

[dependencies]
huffman-compress2 = "0.7"
shakmaty = "0.27"
bit-vec = "0.8"
pgn-reader = "0.26"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benches"
harness = false
