[package]
name = "chess-huffman"
version = "0.11.0"
authors = ["Thomas Daniels <daniels.thomas@pm.me>"]
edition = "2024"
license = "GPL-3.0+"
keywords = ["huffman", "compression", "decompression", "chess"]
readme = "README.md"
repository = "https://github.com/thomas-daniels/rust-chess-huffman"
categories = ["compression", "encoding", "algorithms", "games"]
description = "Compresses chess games using Huffman coding"

[dependencies]
shakmaty = "0.29"
pgn-reader = "0.28"
minimum_redundancy = "0.3"
bitm = "0.5"
byteorder = "1.5"

[dev-dependencies]
criterion = "0.7"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "benches"
harness = false
